fix: +text display on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -241,4 +241,8 @@ button.resultButton:active {
   .operationPad {
     width: 90%;
   }
+  .display {
+    font-size: 12vw;
+    height: 26vw;
+}
 }
